--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,7 +1,7 @@
 # The default is for AEM UE. Make sure to change the URL to your AEM instance and GitHub repository.
 mountpoints:
    /:
-     url: "https://author-p121252-e1560178.adobeaemcloud.com/bin/franklin.delivery/adobedevxsc/citisignal-designs/main"
+     url: "https://author-p59602-e475952.adobeaemcloud.com/bin/franklin.delivery/adobedevxsc/citisignal-designs/main"
      type: "markup"
      suffix: ".html"
 
